--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/solid-router-ssr-query": "^1.132.25",
     "@tanstack/solid-start": "^1.132.25",
     "clsx": "^2.1.1",
+    "d3-color": "^3.1.0",
     "lucide-solid": "^0.544.0",
     "nitro": "npm:nitro-nightly@latest",
     "solid-js": "^1.9.9",
@@ -34,6 +35,7 @@
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.2",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
+    "@types/d3-color": "^3.1.3",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import-x": "^4.16.1",
